--- a/board.html
+++ b/board.html
@@ -275,6 +275,8 @@
 
     <div class="dialog" id="task-dialog"></div>
 
+    <script src="./script/add_task_v2_templates.js"></script>
+    <script src="./script/add_task_v2.js"></script>
     <script src="./script/overlay_board.js"></script>
     <script src="./script/board.js"></script>
 </body>
