--- a/summary.html
+++ b/summary.html
@@ -166,7 +166,7 @@
                     <section class="summary-card">
                         <div class="card-row">
 
-                            <div class="first-card-row">
+                            <a class="first-card-row" href="./board.html#to-do-board">
                                 <div class="first-card-row-logo">
                                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" class="pen">
                                         <mask id="mask0_390335_1376" style="mask-type:alpha" maskUnits="userSpaceOnUse"
@@ -192,9 +192,9 @@
                                     <h3>1</h3>
                                     <span>To-do</span>
                                 </div>
-                            </div>
+                            </a>
 
-                            <div class="first-card-row">
+                            <a class="first-card-row" href="./board.html#done-board">
 
                                 <div class="first-card-row-logo">
                                     <svg width="37" height="30" viewBox="0 0 37 30" fill="none" class="done-svg">
@@ -208,11 +208,11 @@
                                     <span>Done</span>
                                 </div>
 
-                            </div>
+                            </a>
 
                         </div>
 
-                        <div class="second-card-row">
+                        <a class="second-card-row" href="./board.html">
 
                             <section class="summary-category">
                                 <div class="summary-category-logo">
@@ -239,21 +239,21 @@
                                 <p>Upcoming Deadline</p>
                             </section>
 
-                        </div>
+                        </a>
 
                         <div class="card-row">
-                            <div class="third-card-row">
+                            <a class="third-card-row" href="./board.html">
                                 <h3>5</h3>
                                 <span>Tasks in Board</span>
-                            </div>
-                            <div class="third-card-row">
+                            </a>
+                            <a class="third-card-row" href="./board.html">
                                 <h3>5</h3>
                                 <span>Tasks in Board</span>
-                            </div>
-                            <div class="third-card-row">
+                            </a>
+                            <a class="third-card-row" href="./board.html">
                                 <h3>5</h3>
                                 <span>Tasks in Board</span>
-                            </div>
+                            </a>
                         </div>
                     </section>
 
