given Ids for all Card infos in Summary

--- a/summary.html
+++ b/summary.html
@@ -189,7 +189,7 @@
                                     </svg>
                                 </div>
                                 <div class="first-card-row-desc">
-                                    <h3>1</h3>
+                                    <h3 id="all-to-do-tasks">1</h3>
                                     <span>To-do</span>
                                 </div>
                             </a>
@@ -204,7 +204,7 @@
                                 </div>
 
                                 <div class="first-card-row-desc">
-                                    <h3>1</h3>
+                                    <h3 id="all-done-tasks">1</h3>
                                     <span>Done</span>
                                 </div>
 
@@ -215,7 +215,7 @@
                         <a class="second-card-row" href="./board.html">
 
                             <section class="summary-category">
-                                <div class="summary-category-logo">
+                                <div class="summary-category-logo" id="summary-category-logo">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="35" height="26" viewBox="0 0 35 26"
                                         fill="none">
                                         <path
@@ -227,15 +227,15 @@
                                     </svg>
                                 </div>
                                 <div class="second-card-row-desc">
-                                    <h3>1</h3>
-                                    <span>Urgent</span>
+                                    <h3 id="all-tasks-from-priority">1</h3>
+                                    <span id="priority-type">Urgent</span>
                                 </div>
                             </section>
 
                             <div class="summary-card-divider"></div>
 
                             <section class="deadline-section">
-                                <span>October 30, 2025</span>
+                                <span id="date-of-deadline">October 30, 2025</span>
                                 <p>Upcoming Deadline</p>
                             </section>
 
@@ -243,16 +243,16 @@
 
                         <div class="card-row">
                             <a class="third-card-row" href="./board.html">
-                                <h3>5</h3>
+                                <h3 id="all-tasks">5</h3>
                                 <span>Tasks in Board</span>
                             </a>
                             <a class="third-card-row" href="./board.html">
-                                <h3>5</h3>
-                                <span>Tasks in Board</span>
+                                <h3 id="tasks-in-progress">5</h3>
+                                <span>Tasks in Progress</span>
                             </a>
                             <a class="third-card-row" href="./board.html">
-                                <h3>5</h3>
-                                <span>Tasks in Board</span>
+                                <h3 id="tasks-in-awaiting-feedback">5</h3>
+                                <span>Awaiting Feedback</span>
                             </a>
                         </div>
                     </section>
