add task category counters and upcoming deadline rendering

--- a/summary.html
+++ b/summary.html
@@ -219,7 +219,7 @@
                         <a class="second-card-row" href="./board.html">
 
                             <section class="summary-category">
-                                <div class="summary-category-logo" id="summary-category-logo">
+                                <div class="summary-category-logo">
                                     <svg width="35" height="26" viewBox="0 0 35 26"
                                         fill="none">
                                         <path
@@ -232,7 +232,7 @@
                                 </div>
                                 <div class="second-card-row-desc">
                                     <h3 id="all-tasks-from-priority"></h3>
-                                    <span id="priority-type">Urgent</span>
+                                    <span>Urgent</span>
                                 </div>
                             </section>
 
