--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./script/script.js"></script>
     <script src="./script/template.js"></script>
     <script src="./script/summary.js"></script>
+    <script src="./script/test_contacts.js"></script>
 
 </head>
 
