--- a/board.html
+++ b/board.html
@@ -15,7 +15,7 @@
     <script src="./script/test_contacts.js"></script> <!-- Muss auf obj.js geändert werden -->
 </head>
 
-<body onload="init(); renderTasks()">
+<body onload="boardInit()">
 
     <div class="layout">
         <section id="overlay_board" class="overlay-board d_none" onclick="closeOverlayBoard()">
