--- a/summary.html
+++ b/summary.html
@@ -10,7 +10,7 @@
     <title>Summary</title>
 </head>
 
-<body onload="init(); loadCardInfos()">
+<body onload="summaryInit()">
     <section class="layout">
 
         <nav class="navbar">
@@ -239,7 +239,7 @@
                             <div class="summary-card-divider"></div>
 
                             <section class="deadline-section">
-                                <span id="date-of-deadline">October 30, 2025</span>
+                                <span id="date-of-deadline"></span>
                                 <p>Upcoming Deadline</p>
                             </section>
 
