--- a/add_task.html
+++ b/add_task.html
@@ -8,7 +8,7 @@
     <title>Add Task</title>
 </head>
 
-<body onclick="closeDropdownMenus(event)" onload="init()">
+<body onclick="closeDropdownMenus(event)" onload="addTaskInit()">
     <div id="add_task_overlay" class="add-task-overlay d_none">
         <div class="add-tasl-overlay-board">
             <div id="overlay_add_task_created_msg" class="add-task-created-msg">
