--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body onload="init()">
+<body onload="logInInit()">
 
     <section class="overlay_animation">
         <div class="animation_join_logo">
