board fix and greeting implemented

--- a/summary.html
+++ b/summary.html
@@ -262,7 +262,7 @@
                     </section>
 
                     <section class="greeting-section">
-                        <span>Good morning,</span>
+                        <span id="greeting-text">Good morning,</span>
                         <h3>Sofia Müller</h3>
                     </section>
 
