--- a/summary.html
+++ b/summary.html
@@ -137,7 +137,7 @@
                                 fill="#A8A8A8" />
                         </svg>
 
-                        <div class="profil-header" onclick="toggleBurgerMenu()"></div>
+                        <div id="profil_header" class="profil-header" onclick="toggleBurgerMenu()"></div>
 
                         <div class="nav-profile-container" id="profile-menu">
                             <div class="nav-profile-link-container">
