animated Overlay after login is finish

--- a/contacts.html
+++ b/contacts.html
@@ -152,7 +152,7 @@
                 <section id="contact_list_area" class="contact-list-area">
                     <div class="add-new-contact-btn-container">
                         <button class="add-new-contact-btn" onclick="addNewContact()">
-                            <h3>Add new contact</h3>
+                            <span>Add new contact</span>
                             <svg class="add-new-contact-img" xmlns="http://www.w3.org/2000/svg" width="33" height="33"
                                 viewBox="0 0 33 33" fill="none">
                                 <mask id="mask0_373102_21" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
