Make task category input readonly
Added the readonly attribute to the task category input field to prevent manual editing. This ensures users select a category only through the provided UI controls.

--- a/add_task.html
+++ b/add_task.html
@@ -336,7 +336,8 @@
                                     <input id="add_task_category"
                                         class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-black"
                                         type="text" placeholder="Select task category"
-                                        onfocus="highlightInputFields('add_task_category')">
+                                        onfocus="highlightInputFields('add_task_category')"
+                                        readonly>
                                     <div id="add_task_form_category_arrow_svg"
                                         class="add-task-form-assigned-to-arrow-down-svg"
                                         onclick="event.stopPropagation()">
