changed from test_contact.js to script.js

--- a/board.html
+++ b/board.html
@@ -12,7 +12,7 @@
     <script src="./script/template.js"></script>
     <script src="./script/add_task.js"></script>
     <script src="./script/add_task_templates.js"></script>
-    <script src="./script/test_contacts.js"></script> <!-- Muss auf obj.js geändert werden -->
+    <script src="./script/script.js"></script>
 </head>
 
 <body onload="boardInit()">
