--- a/add_task.html
+++ b/add_task.html
@@ -459,7 +459,7 @@
         </main>
     </div>
 
-    <script src="./script/test_contacts.js"></script>
+    <script src="./script/script.js"></script>
     <script src="./script/add_task_templates.js"></script>
     <script src="./script/add_task.js"></script>
     <script src="./script/script.js"></script>
