--- a/summary.html
+++ b/summary.html
@@ -144,7 +144,7 @@
                                     <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./help.html">Help</a></li>
                                     <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a></li>
                                     <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./privacy_policy.html">Privacy Policy</a></li>
-                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="#">Log out</a></li>
+                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./index.html">Log out</a></li>
                                 </ul>
                             </div>
                         </div>
