--- a/help.html
+++ b/help.html
@@ -138,13 +138,13 @@
                                 fill="#A8A8A8" />
                         </svg>
 
-                        <div id="profil_header_summary" class="profil-header" onclick="toggleBurgerMenu()"></div>
+                        <div class="profil-header" onclick="toggleBurgerMenu()"></div>
 
                         <div class="nav-profile-container" id="profile-menu">
                             <div class="nav-profile-link-container">
                                 <ul class="nav-profile-links">
                                     <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./help.html">Help</a></li>
-                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a></li>
+                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="#">Legal Notice</a></li>
                                     <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./privacy_policy.html">Privacy Policy</a></li>
                                     <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./index.html">Log out</a></li>
                                 </ul>
