link to privacy policy in Privacy policy, help and legal notice

--- a/help.html
+++ b/help.html
@@ -94,12 +94,12 @@
       </ul>
       <ul class="navbar-footer">
         <li>
-          <a class="navbar-footer-link" href="">
-            <p>Private Policy</p>
+          <a class="navbar-footer-link" href="./privacy_policy.html">
+            <p>Privacy Policy</p>
           </a>
         </li>
         <li>
-          <a class="navbar-footer-link" href="">
+          <a class="navbar-footer-link" href="./legal_notice.html">
             <p>Legal Notice</p>
           </a>
         </li>
