--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -94,7 +94,7 @@
       </ul>
       <ul class="navbar-footer">
         <li class="navbar-active">
-          <a class="navbar-footer-link" href="./privacy_police.html">Private Policy</a>
+          <a class="navbar-footer-link" href="./privacy_policy.html">Private Policy</a>
         </li>
         <li>
           <a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a>
