--- a/help.html
+++ b/help.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Help</title>
   <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
-  <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="./style/help.css" />
+  <link rel="stylesheet" href="./style/style.css" />
 </head>
 
-<body class="help">
+<body class="help" onload="rederProfilHeaderIcon('profil_header_help')">
   <div class="layout">
     <nav class="navbar">
       <svg width="102" height="122" viewBox="0 0 102 122" fill="none">
@@ -138,7 +138,7 @@
                                 fill="#A8A8A8" />
                         </svg>
 
-                        <div class="profil-header" onclick="toggleBurgerMenu()"></div>
+                        <div id="profil_header_help" class="profil-header" onclick="toggleBurgerMenu()"></div>
 
                         <div class="nav-profile-container" id="profile-menu">
                             <div class="nav-profile-link-container">
