burger menu optimized with text nowrap

--- a/summary.html
+++ b/summary.html
@@ -28,7 +28,6 @@
             </svg>
 
             <ul class="nav-list">
-
                 <li>
                     <a class="navbar-link navbar-active" href="./summary.html">
                         <div class="category-logo">
@@ -76,7 +75,7 @@
                         <p>Board</p>
                     </a>
                 </li>
-                
+
                 <li>
                     <a class="navbar-link" href="./contacts.html">
                         <div class="category-logo">
@@ -142,10 +141,10 @@
                         <div class="nav-profile-container" id="profile-menu">
                             <div class="nav-profile-link-container">
                                 <ul class="nav-profile-links">
-                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./help.html">Help</a></li>
-                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a></li>
-                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./privacy_policy.html">Privacy Policy</a></li>
-                                    <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./index.html" onclick="logOut()">Log out</a></li>
+                                    <li><a href="./help.html">Help</a></li>
+                                    <li><a href="./legal_notice.html">Legal Notice</a></li>
+                                    <li><a href="./privacy_policy.html">Privacy Policy</a></li>
+                                    <li><a href="./index.html" onclick="logOut()">Log out</a></li>
                                 </ul>
                             </div>
                         </div>
