--- a/add_task.html
+++ b/add_task.html
@@ -143,10 +143,10 @@
                         <div class="nav-profile-container" id="profile-menu">
                             <div class="nav-profile-link-container">
                                 <ul class="nav-profile-links">
-                                    <li class="nav-profile-link-item"><a href="./help.html">Help</a></li>
-                                    <li class="nav-profile-link-item"><a href="./legal_notice.html">Legal Notice</a></li>
-                                    <li class="nav-profile-link-item"><a href="./privacy_policy.html">Privacy Policy</a></li>
-                                    <li class="nav-profile-link-item"><a href="index.html">Log out</a></li>
+                                    <li><a href="./help.html">Help</a></li>
+                                    <li><a href="./legal_notice.html">Legal Notice</a></li>
+                                    <li><a href="./privacy_policy.html">Privacy Policy</a></li>
+                                    <li><a href="./index.html" onclick="logOut()">Log out</a></li>
                                 </ul>
                             </div>
                         </div>
