--- a/help.html
+++ b/help.html
@@ -130,21 +130,15 @@
                 fill="#A8A8A8" />
             </svg>
 
-<<<<<<< HEAD
-            <div class="profil-header" onclick="toggleBurgerMenu()"></div>
-=======
-                        <div id="profil_header_help" class="profil-header" onclick="toggleBurgerMenu()"></div>
->>>>>>> cadba104088f8baa15a42b4792f0d5d9a17326b9
+            <div id="profil_header_help" class="profil-header" onclick="toggleBurgerMenu()"></div>
 
             <div class="nav-profile-container" id="profile-menu">
               <div class="nav-profile-link-container">
                 <ul class="nav-profile-links">
-                  <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./help.html">Help</a></li>
-                  <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./legal_notice.html">Legal
-                      Notice</a></li>
-                  <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./privacy_policy.html">Privacy
-                      Policy</a></li>
-                  <li class="nav-profile-link-item"><a class="navbar-footer-link" href="./index.html">Log out</a></li>
+                  <li><a href="./help.html">Help</a></li>
+                  <li><a href="./legal_notice.html">Legal Notice</a></li>
+                  <li><a href="./privacy_policy.html">Privacy Policy</a></li>
+                  <li><a href="./index.html" onclick="logOut()">Log out</a></li>
                 </ul>
               </div>
             </div>
