--- a/summary.html
+++ b/summary.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
+
     <title>Summary</title>
 </head>
 
@@ -266,7 +268,8 @@
 
         </main>
 
-        <section onclick="stopPropagation(event)" class="animated-overlay-background d_none" id="animated-overlay-parent">
+        <section onclick="stopPropagation(event)" class="animated-overlay-background d_none"
+            id="animated-overlay-parent">
             <div class="animated-overlay o.0" id="animated_overlay_id">
             </div>
         </section>
