--- a/board.html
+++ b/board.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Board</title>
+    <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
 
     <link rel="stylesheet" href="./style/style.css" />
 
@@ -149,7 +150,7 @@
                                 </ul>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </header>
@@ -185,8 +186,7 @@
                             </div>
                             <button onclick="openAddTask()">
                                 <p>Add task</p>
-                                <svg width="20" height="20" viewBox="0 0 20 20"
-                                    fill="none">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <path
                                         d="M8.66602 11.3327H0.666016V8.66602H8.66602V0.666016H11.3327V8.66602H19.3327V11.3327H11.3327V19.3327H8.66602V11.3327Z"
                                         fill="white" />
