--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
+    <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
 
     <link rel="stylesheet" href="./style/style.css">
 
@@ -59,7 +60,7 @@
 
 
             <section class="input_group">
-                
+
                 <section class="email_input_section">
                     <form class="email_input" id="input_email">
                         <label for="input_email">
