--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
 
         <footer class="main_footer">
-            <a href="./privacy_policy.html">Privacy Policy</a>
-            <a href="./legal_notice.html">Legal notice</a>
+            <a href="./privacy_policy_from_login.html">Privacy Policy</a>
+            <a href="./legal_notice_from_login.html">Legal notice</a>
         </footer>
     </main>
 
