add the guest access functionality to the site. the data saved in localStorage temporary. as long as the guest is registered.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
             <a href="./legal_notice_from_login.html">Legal notice</a>
         </footer>
     </main>
-
+    <script src="/script/guestlogin.js"></script>
+    <script src="/script/login.js"></script>
+    <script src="/script/script.js"></script>
 </body>
 
 </html>
