--- a/board.html
+++ b/board.html
@@ -146,7 +146,7 @@
                                     <li><a href="./help.html">Help</a></li>
                                     <li><a href="./legal_notice.html">Legal Notice</a></li>
                                     <li><a href="./privacy_policy.html">Privacy Policy</a></li>
-                                    <li><a href="./index.html" onclick="logOut()">Log out</a></li>
+                                    <li><a href="#" onclick="logOut()">Log out</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -277,6 +277,9 @@
 
     <script src="./script/overlay_board.js"></script>
     <script src="./script/board.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="/script/guestlogin.js"></script>
+    <script src="/script/login.js"></script>
 </body>
 
 </html>
