--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@
                                     <li><a href="./help.html">Help</a></li>
                                     <li><a href="./legal_notice.html">Legal Notice</a></li>
                                     <li><a href="./privacy_policy.html">Privacy Policy</a></li>
-                                    <li><a href="./index.html" onclick="logOut()">Log out</a></li>
+                                    <li><a href="#" onclick="logOut()">Log out</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -221,6 +221,9 @@
     </section>
     <script src="./script/contact_templates.js"></script>
     <script src="./script/contact.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="/script/guestlogin.js"></script>
+    <script src="/script/login.js"></script>
 </body>
 
 
