--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -136,7 +136,7 @@
                   <li><a href="./help.html">Help</a></li>
                   <li><a href="./legal_notice.html">Legal Notice</a></li>
                   <li><a href="./privacy_policy.html">Privacy Policy</a></li>
-                  <li><a href="./index.html" onclick="logOut()">Log out</a></li>
+                  <li><a href="#" onclick="logOut()">Log out</a></li>
                 </ul>
               </div>
             </div>
