--- a/help.html
+++ b/help.html
@@ -258,7 +258,9 @@
       </section>
     </main>
   </div>
-  <script src="./script/script.js"></script>
+    <script src="/script/guestlogin.js"></script>
+    <script src="/script/login.js"></script>
+    <script src="/script/script.js"></script>
 </body>
 
 </html>
