delete the dot in the path of js files.

--- a/board.html
+++ b/board.html
@@ -271,12 +271,12 @@
 
     <div class="dialog" id="task-dialog"></div>
 
-    <script src="./script/template.js"></script>
-    <script src="./script/add_task.js"></script>
-    <script src="./script/add_task_templates.js"></script>
-    <script src="./script/overlay_board.js"></script>
-    <script src="./script/board.js"></script>
-    <script src="./script/script.js"></script>
+    <script src="/script/template.js"></script>
+    <script src="/script/add_task.js"></script>
+    <script src="/script/add_task_templates.js"></script>
+    <script src="/script/overlay_board.js"></script>
+    <script src="/script/board.js"></script>
+    <script src="/script/script.js"></script>
     <script src="/script/guestlogin.js"></script>
     <script src="/script/login.js"></script>
 </body>
