--- a/contacts.html
+++ b/contacts.html
@@ -218,9 +218,9 @@
             </div>
         </main>
     </section>
-    <script src="./script/contact_templates.js"></script>
-    <script src="./script/contact.js"></script>
-    <script src="./script/script.js"></script>
+    <script src="/script/contact_templates.js"></script>
+    <script src="/script/contact.js"></script>
+    <script src="/script/script.js"></script>
     <script src="/script/guestlogin.js"></script>
     <script src="/script/login.js"></script>
 </body>
