--- a/privacy_policy_from_login.html
+++ b/privacy_policy_from_login.html
@@ -367,9 +367,9 @@
       </section>
     </main>
   </div>
-    <script src="/script/guestlogin.js"></script>
-    <script src="/script/login.js"></script>
-    <script src="/script/script.js"></script>
+    <script src="./script/guestlogin.js"></script>
+    <script src="./script/login.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
