--- a/summary.html
+++ b/summary.html
@@ -278,8 +278,8 @@
     <script src="./script/template.js"></script>
     <script src="./script/summary.js"></script>
     <script src="./script/script.js"></script>
-    <script src="/script/guestlogin.js"></script>
-    <script src="/script/login.js"></script>
+    <script src="./script/guestlogin.js"></script>
+    <script src="./script/login.js"></script>
 </body>
 
 </html>
