--- a/add_task.html
+++ b/add_task.html
@@ -464,11 +464,11 @@
         </main>
     </div>
 
-    <script src="/script/add_task_templates.js"></script>
-    <script src="/script/add_task.js"></script>
-    <script src="/script/script.js"></script>
-    <script src="/script/guestlogin.js"></script>
-    <script src="/script/login.js"></script>
+    <script src="./script/add_task_templates.js"></script>
+    <script src="./script/add_task.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="./script/guestlogin.js"></script>
+    <script src="./script/login.js"></script>
 </body>
 
 </html>
