--- a/legal_notice_from_login.html
+++ b/legal_notice_from_login.html
@@ -187,9 +187,9 @@
       </section>
     </main>
   </div>
-    <script src="/script/guestlogin.js"></script>
-    <script src="/script/login.js"></script>
-    <script src="/script/script.js"></script>
+    <script src="./script/guestlogin.js"></script>
+    <script src="./script/login.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
