add task responive rework

--- a/add_task.html
+++ b/add_task.html
@@ -167,7 +167,6 @@
                                 <label for="add_task_title">
                                     <p>Titel</p>
                                     <p class="add-task-form-required">*</p>
-
                                 </label>
                                 <div class="add-tast-form-input-required-container">
                                     <input id="add_task_title" type="text"
@@ -433,7 +432,7 @@
                         <div class="add-task-form-btns">
                             <button class="add-task-form-clear-btn" onclick="clearForm()" type="reset">
                                 <p>Clear</p>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                <svg width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
                                     <path
                                         d="M12.0011 11.9998L17.2441 17.2428M6.75806 17.2428L12.0011 11.9998L6.75806 17.2428ZM17.2441 6.75684L12.0001 11.9998L17.2441 6.75684ZM12.0001 11.9998L6.75806 6.75684L12.0001 11.9998Z"
@@ -444,7 +443,7 @@
                             <button id="add_task_form_create_btn" class="add-task-form-create-btn"
                                 onclick="createNewTask()" type="submit">
                                 <p>Create Task</p>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                <svg width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
                                     <mask id="mask0_387746_82" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
                                         y="0" width="24" height="24">
