added contacts_create_edit.js and changed function-strukture

--- a/contacts.html
+++ b/contacts.html
@@ -219,6 +219,7 @@
         </main>
     </section>
     <script src="./script/contact_templates.js"></script>
+    <script src="./script/contacts_create_edit.js"></script>
     <script src="./script/contact.js"></script>
     <script src="./script/script.js"></script>
     <script src="./script/guestlogin.js"></script>
