--- a/summary.html
+++ b/summary.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
-
+    <script src="./script/summary.js"></script>
     <title>Summary</title>
 </head>
 
@@ -259,7 +259,7 @@
 
                     <section class="greeting-section">
                         <span id="greeting-text"></span>
-                        <h3 id="username"></h3>
+                        <h3 id="username">Guest</h3>
                     </section>
 
                 </section>
@@ -276,7 +276,7 @@
     </section>
 
     <script src="./script/template.js"></script>
-    <script src="./script/summary.js"></script>
+
     <script src="./script/script.js"></script>
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
