--- a/summary.html
+++ b/summary.html
@@ -259,7 +259,7 @@
 
                     <section class="greeting-section">
                         <span id="greeting-text"></span>
-                        <h3 id="username">Guest</h3>
+                        <h3 id="username"></h3>
                     </section>
 
                 </section>
@@ -276,10 +276,10 @@
     </section>
 
     <script src="./script/template.js"></script>
-
     <script src="./script/script.js"></script>
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
+    <script src="./script/menuDropdown.js"></script>
 </body>
 
 </html>
