--- a/legal_notice_from_login.html
+++ b/legal_notice_from_login.html
@@ -190,6 +190,7 @@
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/script.js"></script>
+    <script src="./script/menu_dropdown.js"></script>
 </body>
 
 </html>
