--- a/privacy_policy_from_login.html
+++ b/privacy_policy_from_login.html
@@ -370,6 +370,7 @@
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/script.js"></script>
+    <script src="./script/menu_dropdown.js"></script>
 </body>
 
 </html>
