--- a/summary.html
+++ b/summary.html
@@ -279,7 +279,7 @@
     <script src="./script/script.js"></script>
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
-    <script src="./script/menuDropdown.js"></script>
+    <script src="./script/menu_dropdown.js"></script>
 </body>
 
 </html>
