add task rework in board

--- a/add_task.html
+++ b/add_task.html
@@ -441,7 +441,7 @@
                                 </svg>
                             </button>
                             <button id="add_task_form_create_btn" class="add-task-form-create-btn"
-                                onclick="createNewTask()" type="submit">
+                                onclick="createNewTask('to-do')" type="submit">
                                 <p>Create Task</p>
                                 <svg width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
