private to privacy

--- a/contacts.html
+++ b/contacts.html
@@ -98,7 +98,7 @@
             </ul>
             <ul class="navbar-footer">
                 <li>
-                    <a class="navbar-footer-link" href="./privacy_policy.html">Private Policy</a>
+                    <a class="navbar-footer-link" href="./privacy_policy.html">Privacy Policy</a>
                 </li>
                 <li>
                     <a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a>
