--- a/legal_notice_from_login.html
+++ b/legal_notice_from_login.html
@@ -41,7 +41,7 @@
       </ul>
       <ul class="navbar-footer">
         <li>
-          <a class="navbar-footer-link" href="./privacy_policy_from_login.html">Private Policy</a>
+          <a class="navbar-footer-link" href="./privacy_policy_from_login.html">Privacy Policy</a>
         </li>
         <li class="navbar-active">
           <a class="navbar-footer-link" href="./legal_notice_from_login.html">Legal Notice</a>
