--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Help</title>
+  <title>Privacy Policy</title>
   <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
   <link rel="stylesheet" href="./style/help.css" />
   <link rel="stylesheet" href="./style/style.css" />
@@ -94,7 +94,7 @@
       </ul>
       <ul class="navbar-footer">
         <li class="navbar-active">
-          <a class="navbar-footer-link" href="./privacy_policy.html">Private Policy</a>
+          <a class="navbar-footer-link" href="./privacy_policy.html">Privacy Policy</a>
         </li>
         <li>
           <a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a>
