--- a/legal_notice.html
+++ b/legal_notice.html
@@ -94,7 +94,7 @@
       </ul>
       <ul class="navbar-footer">
         <li>
-          <a class="navbar-footer-link" href="./privacy_policy.html">Private Policy</a>
+          <a class="navbar-footer-link" href="./privacy_policy.html">Privacy Policy</a>
         </li>
         <li class="navbar-active">
           <a class="navbar-footer-link" href="./legal_notice.html">Legal Notice</a>
