--- a/board.html
+++ b/board.html
@@ -268,6 +268,7 @@
     <script src="./script/guestlogin.js"></script>
     <script src="./script/login.js"></script>
     <script src="./script/menu_dropdown.js"></script>
+    <script src="./script/board_addtask_template.js"></script>
 </body>
 
 </html>
