Task Edit code optimized

--- a/board.html
+++ b/board.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Board</title>
     <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg" />
-
     <link rel="stylesheet" href="./style/style.css" />
 
 </head>
@@ -269,6 +268,7 @@
     <script src="./script/login.js"></script>
     <script src="./script/menu_dropdown.js"></script>
     <script src="./script/board_addtask_template.js"></script>
+    <script src="./script/edit_task.js"></script>
 </body>
 
 </html>
